--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -25,7 +25,7 @@ body {
     justify-content: flex-start;
     padding-left: 10%;
     box-sizing: border-box;
-    background-image: url('/images/hero3.jpg');
+    background-image: url('/images/WhatsApp\ Image\ 2025-07-02\ at\ 22.10.20_cba45c2c.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
