--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1043,6 +1043,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 }
 
 .testimonial-title {
