--- a/assets/css/theme copy.css
+++ b/assets/css/theme copy.css
@@ -334,6 +334,92 @@
     color: #888 !important
 }
 
+.footer-logo {
+    max-width: 160px
+}
+
+.footer-logo>img {
+    width: 100%
+}
+
+.footer-link .h5 {
+    margin-bottom: 15px;
+    display: inline-block;
+    font-size: 15px !important
+}
+
+.footer-address-box .address-location {
+    font-size: 15px;
+    margin-bottom: 10px
+}
+
+.footer-address-box a {
+    border-bottom: 0;
+    font-style: normal;
+    display: block
+}
+
+.say-hellow {
+    padding: 80px 0
+}
+
+.clock-icon {
+    width: 40px
+}
+
+.footer-address-box-inner {
+    width: calc(100% - 40px)
+}
+
+.divider {
+    border-bottom: 1px solid #d9d9d940;
+    margin: 20px 0
+}
+
+.footer-social img {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    margin: 0 10px 0 10px;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s
+}
+
+.footer-social img:hover {
+    opacity: .6
+}
+
+.footer__reveal {
+    z-index: 0;
+    background-color: var(--black);
+    color: var(--white);
+    align-items: flex-end;
+    width: 100vw;
+    padding: 66px 0 50px;
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    pointer-events: none;
+    background-color: #0a0a0a
+}
+
+.footer__reveal__image {
+    display: block;
+    width: 100%;
+    max-width: 1282px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 10px
+}
+
+.break-box-section .pgi-video-wrap {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    padding: 0
+}
 
 .break-box-section img {
     vertical-align: top
@@ -1741,13 +1827,12 @@ html:not(.tt-no-scroll) #tt-header:not(.redLogo) {
     pointer-events: none
 }
 
-/* #tt-header.tt-header-fixed {
+#tt-header.tt-header-fixed {
     position: fixed
-} */
+}
 
 .tt-header-inner {
     width: 100%;
-    height: 100px;
     display: flex;
     padding-top: 40px;
     align-items: center
@@ -1767,9 +1852,7 @@ body:not(.tt-boxed) .tt-header-inner,
 
 .tt-header-col {
     display: flex;
-    align-items: center;
-    height: 100px;
-    width: 120px;
+    align-items: center
 }
 
 .tt-header-col:first-child {
@@ -1788,25 +1871,23 @@ body:not(.tt-boxed) .tt-header-inner,
 .tt-logo a {
     display: inline-block;
     font-size: 21px;
-    /* color: #fff */
+    color: #fff
 }
 
 .tt-logo img {
-    height: 100px;
-    /* max-height: 25px */
-
+    max-height: 25px
 }
 
-/* .tt-logo-dark {
+.tt-logo-dark {
     display: none
-} */
+}
 
 @media (max-width:1024px) {
     .tt-logo {
         top: 33px
     }
     .tt-logo img {
-        max-height: 100px
+        max-height: 25px
     }
 }
 
@@ -10455,16 +10536,17 @@ body:not(.tt-boxed) .tt-footer-inner,
     overflow: hidden
 }
 
-
+.section-video .container-video,
+.section-video .container-video iframe,
 .section-video .container-video video {
     position: absolute;
-    top: 10%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border: 1px solid #0a0a0a
 }
 
-
+.section-video .container-video iframe,
 .section-video .container-video video {
     z-index: 1;
     width: 100%;
@@ -10794,61 +10876,6 @@ video.pgi-video {
     -webkit-object-fit: scale-down;
     display: block;
     margin: auto;
-}
-
-
-@media screen and (max-width: 700px) {
-  .section-video {
-    height: auto;
-    background-color: #fff0;
-    padding-bottom: 20px;
-  }
-
-  .section-video .container-video {
-    width: 100%;
-    height: auto;
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: none;
-    overflow: hidden;
-  }
-
-  .section-video .container-video video,
-  .section-video .container-video iframe {
-    width: 100%;
-    height: auto;
-    max-height: 250px;
-    object-fit: cover;
-  }
-
-  .section-video .container-title {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
-  }
-
-  .section-video .container-title .title {
-    align-items: center;
-    text-align: center;
-  }
-
-  .section-video .container-title .title .container-titleMiddle {
-    flex-direction: column;
-    height: auto;
-  }
-
-  .section-video .container-title .title div {
-    font-size: 32px;
-    line-height: 42px;
-  }
-
-  .section-video .container-title .title div.titleLeft,
-  .section-video .container-title .title div.titleRight {
-    width: 100%;
-    text-align: center;
-  }
 }
 
 /*video.pgi-video*/
