--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -25,9 +25,10 @@ body {
     justify-content: flex-start;
     padding-left: 10%;
     box-sizing: border-box;
-    background-image: url('/images/WhatsApp\ Image\ 2025-07-02\ at\ 22.10.20_cba45c2c.jpg');
+    background-image: url('https://sdmntprwestus3.oaiusercontent.com/files/00000000-f804-61fd-8bda-57582bd90330/raw?se=2025-07-07T17%3A42%3A31Z&sp=r&sv=2024-08-04&sr=b&scid=0e110ef2-45e4-570c-9d80-ab7aecd46bd6&skoid=9ccea605-1409-4478-82eb-9c83b25dc1b0&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-07-07T16%3A19%3A14Z&ske=2025-07-08T16%3A19%3A14Z&sks=b&skv=2024-08-04&sig=ibW3%2Bb/YXTvRRBPYMMDGKghSmNQlzzYGmKYrHbWqO60%3D');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .hero-content {
@@ -37,8 +38,8 @@ body {
 }
 
 .hero-content h1 {
-    font-size: 4rem;
-    font-weight: 800;
+    font-size: 6rem;
+    font-weight: 900;
     margin: 0 0 10px 0;
     color: #000;
     line-height: 1.2;
@@ -46,8 +47,11 @@ body {
 
 .breadcrumb {
     font-size: 1.5rem;
+    font-weight: 700;
     color: #000;
     margin-top: 10px;
+    margin-left: 10px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .breadcrumb a {
