--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1833,7 +1833,8 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  display: block;
+  /* display: block; */
+  image-rendering: auto;
 }
 
 @media (min-width: 768px) {
