--- a/assets/css/theme copy.css
+++ b/assets/css/theme copy.css
@@ -1852,7 +1852,8 @@ body:not(.tt-boxed) .tt-header-inner,
 
 .tt-header-col {
     display: flex;
-    align-items: center
+    align-items: center;
+    width: 100px
 }
 
 .tt-header-col:first-child {
@@ -1870,12 +1871,14 @@ body:not(.tt-boxed) .tt-header-inner,
 
 .tt-logo a {
     display: inline-block;
-    font-size: 21px;
+    font-size: 34px;
     color: #fff
 }
 
 .tt-logo img {
-    max-height: 25px
+    max-height: 25px;
+    width: 100px;
+    height: 100px;
 }
 
 .tt-logo-dark {
